[package]
name = "nanohat-oled-rss-reader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.4.4"
image = "0.23.14"
futures = "0.3.16"
tokio = { version = "0.2", features = ["full"] }
gpio-cdev = { version ="0.4.0", features =["async-tokio"]}
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.0"
reqwest = "0.10.10"